crates/unsoundness_checker/tests/snapshots/type_checking_directive_used/markdown_test__snippet_01.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> snippet_01.py:2:30
  |
1 | # Blanket ignore - suppresses all type errors on this line
2 | result = unsafe_operation()  # type: ignore
  |                              ^^^^^^^^^^^^^^
3 |
4 | # Specific error code - suppresses only specific error types
  |
info: rule `type-checking-directive-used` was selected in the configuration file

error[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> snippet_01.py:5:18
  |
4 | # Specific error code - suppresses only specific error types
5 | x = get_value()  # type: ignore[attr-defined]
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
6 | y = compute()  # type: ignore[arg-type]
  |
info: rule `type-checking-directive-used` was selected in the configuration file

error[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> snippet_01.py:6:16
  |
4 | # Specific error code - suppresses only specific error types
5 | x = get_value()  # type: ignore[attr-defined]
6 | y = compute()  # type: ignore[arg-type]
  |                ^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file
